# ibus-zhuyin

./: AGENTS.md  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  ibus-zhuyin.spec.in  ibus-zhuyin_0.1.0.orig.tar.xz.delta  ibus-zhuyin_0.1.0.orig.tar.xz.id  index.html  release.sh
debian/: changelog  control  copyright  docs  gbp.conf  ibus-zhuyin.install  rules  watch
engine/: Makefile.am  enchant-python.xml.in.in  engine.py  factory.py  ibus-engine-enchant.in  main.py
icons/: Makefile.am  Makefile.in
include/: engine.h  phone.h  phrases.h  punctuation.h  zhuyin.h
m4/: Makefile.am  Makefile.in
po/: LINGUAS  Makevars  POTFILES.in  ibus-zhuyin.pot  zh_CN.po  zh_TW.po
src/: Makefile.am  Makefile.in  enchant.xml.in.in  engine.c  engine.h  main.c  phone.h  zhuyin.c  zhuyin.h  zhuyin.xml.in  zhuyin.xml.in.in
tests/: Makefile.am  test-engine.c
